WIP start on showing more info; aesthetic stuff

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </style>
   </head>
   <body>
-    <h1>hermetic</h1>
-
     <button id="reset">reset</button>
     <br>
     <div id="deck"></div>
-    <div id="info" style="height: 325px; width: 500px;"></div>
+    <div id="info" style="height: 325px; width: 500px; margin-left: 200px; overflow:auto"></div>
     <div id="table"></div>
 
     <div class="blueprint card">
